Added axios and react, in the emd

--- a/app/sails-app/views/layout.ejs
+++ b/app/sails-app/views/layout.ejs
@@ -7,6 +7,10 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <script src="https://fb.me/react-0.14.7.js"></script>
+    <script src="https://fb.me/react-dom-0.14.7.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/dependencies/base.css">
     <link rel="stylesheet" href="/styles/dependencies/wing.css">
@@ -27,7 +31,7 @@
     </div>
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
