--- a/app/sails-app/assets/styles/dependencies/base.css
+++ b/app/sails-app/assets/styles/dependencies/base.css
@@ -56,6 +56,16 @@ body {
   font-size: 1.8rem;
 }
 
+.loading-div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #333;
+  background-color: #f0f0f0;
+}
+
 .card {
   background: #FAFAFA;
   border: 1px solid #999;
