React env set up with linter

--- a/app/sails-app/views/layout.ejs
+++ b/app/sails-app/views/layout.ejs
@@ -37,6 +37,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/bundle.js"></script>
     <!--SCRIPTS END-->
 
   </body>
