--- a/app/sails-app/views/layout.ejs
+++ b/app/sails-app/views/layout.ejs
@@ -30,6 +30,8 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/sakura.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/google-api-client.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
